<resources>
    <string name="app_name">Splitter</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account_label">Delete Account</string>
    <string name="user_profile_header">User Profile</string>
    <string name="profile_picture_content_desc">User Picture</string>
    <string name="signed_in_header">Authenticated</string>
    <string name="sign_out_failed">Signed Out Failed</string>
    <string name="delete_account_failed">Delete Account Failed</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="unknown_sign_in_response">Unkown code for sign in</string>
    <string name="unknown_response">Unkown response</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="text_view_user_name">User Name:</string>
    <string name="mainPageTitle">Splitter</string>
    <string name="accountInfoTitle">Account Information</string>
    <string name="account_info_save">Save</string>
    <integer name="splash_screen_animation_duration">900</integer>

    <string name="delete_account_succeed">Account Deleted</string>

    <!-- Facebook Login Configuration -->
    <string name="facebook_application_id" translatable="false">317557405358107</string>
    <string name="fb_login_protocol_scheme">fb317557405358107</string>

    <!-- Drawer Menu Titles -->
    <string name="account_info">My Account</string>
    <string name="orders_menu">My Orders</string>
    <string name="about_splitter">About Splitter</string>
    <string name="payments_menu">Payments</string>

    <!-- User Registration Activity -->
    <string name="message_welcome">Welcome! This is your first time in our app, we want to know more about you :)</string>
    <string name="textview_user_registration_name">Name</string>
    <string name="textview_user_registration_cpf">CPF</string>
    <string name="textview_user_registration_email">E-mail</string>
    <string name="textview_user_registration_password">Password</string>
    <string name="textview_user_registration_date_birth">Date of Birth</string>
    <string name="textview_user_registration_phone">Phone</string>
    <string name="save">Save</string>


    <!-- Account Information Fragment -->
    <string name="update">Update</string>
    <string name="ask_delete_account_confirmation">Are you sure you want to delete this account?</string>
    <string name="asnwer_yes_delete">Yes, do it!</string>
    <string name="newOrderTitle">New Order</string>
    <string name="new_order">New Order</string>
    <string name="home">Home</string>
    <string name="MyOrdersTitle">My Orders</string>
    <string name="account_created">Account created</string>
    <string name="user_updated">User updated</string>
    <string name="user_not_updated">User not updated</string>
    <string name="user_not_deleted">User not deleted</string>

    <!-- Main Page Activity -->
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="aim_to_qrcode">Please, aim to your QR Code</string>

    <!-- CheckedIn Activity -->
    <string name="accound_should_be_closed">Your bill should be closed before exiting</string>
    <string name="menu">Menu</string>
    <string name="close_bill">Close bill</string>

    <!-- Product Details Fragment -->

    <string name="button_text_send_order">Order</string>
    <string name="button_cancel">Cancel</string>
    <string name="txt_hint_obs">Notes</string>
    <string name="order_total">Total: R$ %1$.2f</string>
    <string name="product_price">R$ %1$.2f</string>
    <string name="msg_product_ordered">Success! Your order number is %d</string>
    <string name="msg_product_order_failed">Product ordering failed. Try again</string>
    <string name="msg_select_quantity">Select a quantity first</string>
    <string name="mm_aa">MM/YYYY</string>
    <string name="msg_invalid_cvv">Invalid CVV</string>
    <string name="msg_expired_card">Expired card</string>
    <string name="msg_invalid_dexp">Invalid expiration date</string>
    <string name="msg_invalid_name">Invalid name</string>
    <string name="msg_invalid_card_number">Invalid card number</string>
    <string name="order_status_waiting">On queue</string>
    <string name="order_status_delivered">Delivered</string>
    <string name="order_status_canceled">Canceled</string>
    <string name="order_status_done">Ready for delivery</string>
    <string name="txt_btn_pay">Pay</string>
    <string name="txt_label_total_indiv">Your total:</string>
    <string name="txt_btn_cancel_order">Cancel order</string>
    <string name="txt_label_card_number">Card Number</string>
    <string name="txt_label_holder_name">Card holder name</string>
    <string name="txt_label_card_cvc">CVC</string>
    <string name="label_product_name">Product Name</string>
    <string name="label_product_qty">Qty</string>
    <string name="label_product_total_table">Table total</string>
    <string name="label_product_total_person">Your total</string>
    <string name="txt_hint_card_expiration_date">Expiration date</string>
    <string name="msg_txt_bill_paid_success">Bill payment registered succesfully</string>
    <string name="msg_txt_bill_paid_failed">Bill payment failed. Try again</string>
    <string name="card_information">Card information</string>
    <string name="participants_menu">Participants</string>
    <string name="participant_name">Participant name</string>
    <string name="participant_email">participant_email</string>
    <string name="participant_account_number">Participant bill number</string>
    <string name="label_search">Search</string>
    <string name="ok_string">OK</string>
    <string name="txt_welcome_message">"Welcome to "</string>
    <string name="msg_show_qrcode">Show the QR Code below to your friends</string>
    <string name="imgDesc_product">Product photo</string>
    <string name="msg_no_changes_user">No changes were detected</string>
    <string name="msg_click_on_button_qrcode">Click on the button below to capture your table\'s QR Code</string>
    <string name="msg_scan_canceled">QR Code scanning was canceled</string>
    <string name="msg_get_valid_qr_code">Get the valid QR Code with your friend</string>
    <string name="msg_table_not_found">Invalid table number</string>
    <string name="msg_request_error">There was an error with your request. Try again</string>
    <string name="msg_unknown_error">Unknown error</string>
    <string name="ok">OK</string>
    <string name="invalid_qr_code">Invalid QR Code</string>
    <string name="msg_split_method_invalid">Invalid split method</string>
    <string name="split_method_dialog_title">Bill split method</string>
    <string name="msg_txt_bill_closed_success">Bill closed successfully</string>

</resources>
