<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/account_info"
            android:checked="false"
            android:icon="@drawable/ic_account"
            android:title="@string/account_info" />

        <item
            android:id="@+id/payments"
            android:checked="false"
            android:icon="@drawable/ic_credit_card"
            android:title="@string/payments_menu" />

        <item
            android:id="@+id/about"
            android:checked="false"
            android:icon="@drawable/ic_info_about"
            android:title="@string/about_splitter" />

        <item
            android:id="@+id/sign_out"
            android:checked="false"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/sign_out" />

    </group>
</menu>