<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.caue.splitter.UserRegistrationActivity">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_centerInParent="true"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_welcome"
            android:layout_centerHorizontal="true"
            android:id="@+id/textview_welcome"
            />

        <EditText
            android:id="@+id/edittext_user_reg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textview_user_registration_name"
            android:layout_below="@id/textview_welcome"/>
        <EditText
            android:id="@+id/edittext_user_reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext_user_reg_name"
            android:hint="@string/textview_user_registration_email"/>

        <EditText
            android:id="@+id/edittext_user_reg_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@id/edittext_user_reg_email"
            android:hint="@string/textview_user_registration_password"/>

        <EditText
            android:id="@+id/edittext_user_reg_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext_user_reg_pass"
            android:hint="@string/textview_user_registration_phone"/>

        <EditText
            android:id="@+id/edittext_user_reg_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_user_reg_phone"
            android:hint="@string/textview_user_registration_cpf" />

        <EditText
            android:id="@+id/edittext_user_reg_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_user_reg_cpf"
            android:hint="@string/textview_user_registration_date_birth"
            android:onClick="showDatePicker" />

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext_user_reg_dob"
            android:text="@string/save"
             />



    </RelativeLayout>

</LinearLayout>