<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card_view_participant_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/card_margin_horizontal"
    android:layout_marginRight="@dimen/card_margin_horizontal"
    android:layout_marginTop="@dimen/card_margin_vertical"
    android:background="@color/white"
    android:foreground="?attr/selectableItemBackground"
    card_view:cardCornerRadius="@dimen/card_recycler_corner_radius"
    card_view:cardElevation="@dimen/card_recycler_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/text_margin">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/participant_profile_picture"
            android:layout_width="56dp"
            android:layout_height="56dp"

            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/text_margin"
            android:contentDescription="@string/profile_picture_content_desc"
            android:tint="@color/purpleBlueSecondaryText"
            android:src="@drawable/ic_user"
            />

        <TextView
            android:id="@+id/tv_participant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/participant_profile_picture"
            android:text="@string/participant_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_participant_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_participant_name"
            android:layout_marginTop="@dimen/text_margin_very_small"
            android:layout_toEndOf="@id/participant_profile_picture"
            android:text="@string/participant_email" />

        <TextView
            android:id="@+id/tv_participant_account_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_participant_email"
            android:layout_marginTop="@dimen/text_margin_very_small"
            android:layout_toEndOf="@id/participant_profile_picture"
            android:text="@string/participant_account_number" />

    </RelativeLayout>
</android.support.v7.widget.CardView>