<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_layout_user_reg_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/edittext_user_reg_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textview_user_registration_date_birth"
                android:inputType="date"
                android:onClick="showDatePicker"
                android:focusableInTouchMode="false"
                android:focusable="false"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_layout_user_reg_name"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_layout_user_reg_dob">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_user_reg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textview_user_registration_name"
                android:inputType="textPersonName"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_layout_user_reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_layout_user_reg_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_user_reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textview_user_registration_email"
                android:inputType="textEmailAddress"
                android:focusable="false"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_layout_user_reg_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_layout_user_reg_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_user_reg_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textview_user_registration_password"
                android:inputType="textPassword"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_layout_user_reg_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_layout_user_reg_pass">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_user_reg_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textview_user_registration_phone"
                android:inputType="phone"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_layout_user_reg_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_layout_user_reg_phone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_user_reg_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textview_user_registration_cpf"
                android:inputType="phone"
                />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</merge>