<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.01">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01">

            <TextView
                android:id="@+id/txt_descricao_produto"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Batatas fatiadas e fritas."
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_nome_produto" />

            <TextView
                android:id="@+id/txt_nome_produto"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Batata Frita"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="normal|bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/txt_preco_produto"
                app:layout_constraintTop_toBottomOf="@+id/img_foto_produto"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:id="@+id/img_foto_produto"
                android:layout_width="0dp"
                android:layout_height="156dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="0.01"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="16dp" />

            <Spinner
                android:id="@+id/spn_qtd_produto"
                android:layout_width="126dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:entries="@array/qtd_array"
                app:layout_constraintLeft_toLeftOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/txt_descricao_produto" />

            <TextView
                android:id="@+id/txt_preco_produto"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="R$ 18,00"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_foto_produto"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btn_send_order"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:elevation="0dp"
                android:text="@string/button_text_send_order"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_observacao_produto" />

            <TextView
                android:id="@+id/order_total"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/order_total"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintLeft_toRightOf="@+id/spn_qtd_produto"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_descricao_produto" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_observacao_produto"
                android:layout_width="0dp"
                android:layout_height="147dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/txt_hint_obs"
                app:hintEnabled="true"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spn_qtd_produto">

                <EditText
                    android:id="@+id/txt_input_observacao_produto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Com cheddar e bacon" />
            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</LinearLayout>